<resources>
    <string name="app_name">Placa Segura</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plate_text">Placa: </string>
    <string name="search_number_plate">Digite aquí y presiona 🔍</string>
    <string name="photo_bottom">Sube una foto</string>
    <string name="driver_data">Datos del conductor</string>
    <string name="vehicle_data">Datos del vehículo</string>
    <string name="about_title">Placa Segura</string>
    <string name="about_text">
        Es una aplicación gratuita que provee de un
        servicio de consultas a las diferentes entidades
        regulatorias y de supervisión de vehículos en el
        Ecuador, con el objetivo de brindar información
        para uso personal.
        \n\n
        La información consumida por Placa segura es
        proporcionada por la Fiscalía General del Estado(FGE)
        \n
    </string>
    <string name="email1">📧 asyepezr1@uce.edu.ec</string>
    <string name="email2">📧 domaldonado@uce.edu.ec</string>
    <string name="email3">📧 masanchezt1@uce.edu.ec</string>
    <string name="userName">ID</string>
    <string name="password">Contraseña</string>
    <string name="btn_login">Iniciar</string>
    <string name="label">Iniciar</string>
    <string name="login">Iniciar Sesión</string>
    <string name="datos_encontrados">Datos Encontrados</string>
    <string name="informacion_fiscalia">Informacion Fiscalía</string>
    <string name="existe_la_placa">¿Existe la Placa?</string>
    <string name="placa_no_ingresada">Placa no ingresada</string>
    <string name="placa_no_existe">Placa no existe</string>
    <string name="anio_modelo">Año de Modelo</string>
    <string name="anio_ultimo_pago">Año Ultimo Pago</string>
    <string name="clase_vehiculo">Clase de Vehículo</string>
    <string name="marca_vehiculo">Marca de Vehículo</string>
    <string name="modelo_vehiculo">Modelo de Vehículo</string>
</resources>