<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.Login"
    android:background="@drawable/log3"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/login"
            android:textColor="#156518"
            android:textSize="38dp"
            android:textStyle="bold"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textField"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            app:boxBackgroundColor="@color/textInputLayoutBg"
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxCornerRadiusBottomStart="14dp"
            app:boxStrokeColor="@color/textInputLayoutStroke"
            app:startIconDrawable="@drawable/ic_baseline_person_pin_24">

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_margin="@dimen/margin_text"
                android:inputType="number"
                android:maxLength="6"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            style="@style/loginButton"
            android:layout_width="138dp"
            android:layout_height="54dp"
            android:layout_gravity="right"
            android:layout_marginTop="2dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_login"
            app:cornerRadius="10dp"
            tools:ignore="TextContrastCheck" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>